# board-rust

./: .gitignore  Cargo.toml  README.md
migrations/2023-07-30-070250_create_user/: up.sql
migrations/2023-07-30-071129_create_post/: up.sql
migrations/2023-07-30-071613_create_like/: up.sql
src/: config.rs  db.rs  lib.rs  main.rs  schema.rs
src/models/: like.rs  mod.rs  post.rs  sign_in.rs  user.rs
templates/: index.html.tera  sign_in.html.tera
templates/posts/: edit.html.tera  new.html.tera
templates/users/: new.html.tera
