[package]
name = "board-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
diesel_derives = "2.1.0"
dotenv = "0.15.0"
once_cell = "1.18.0"
r2d2 = "0.8.10"
rocket = "0.4.11"
serde = "1.0.179"
serde_json = "1.0.104"
tera = "1.19.0"
validator = "0.16.1"
validator_derive = "0.16.0"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["tera_templates"]